# seqdiff

./: Cargo.toml  LICENSE  README.md  loop_test
.github/workflows/: main.yml  manylinux_build.yml  test_pypi.yml  test_pypi_manylinux.yml
benches/: diff.rs  main.rs
python/: Cargo.toml  pyproject.toml
python/seqdiff/: __init__.py  __init__.pyi  __main__.py
python/src/: lib.rs
python/tests/: test_main.py
src/: lib.rs  tests.rs
