[package]
name = "seqdiff"
version = "0.2.4"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Diff between two sequences"
homepage = "https://github.com/tamuhey/seqdiff"
repository = "https://github.com/tamuhey/seqdiff"
keywords = ["algorithm", "diff", "Vec"]
readme = "README.md"
documentation = "https://docs.rs/seqdiff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

quickcheck_macros = "0.9.1"    
quickcheck = "0.9.2"   
rstest = "0.6.4"
criterion = "0.3"

[[bench]]
name = "main"
harness = false

[lib]
bench = false