[build-system]
requires = [ "poetry>=1.0.0",]
build-backend = "poetry.masonry.api"

[tool.versionup]
tag = true
commit = true
files = [ "Cargo.toml",]
tag_prefix = "python/"

[tool.poetry]
name = "pyseqdiff"
version = "0.2.0"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
[[tool.poetry.packages]]
include = "seqdiff"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
hypothesis = "^4.57.1"
twine = "^1.15.0"
