[build-system]
requires = [ "maturin",]
build-backend = "maturin"

[tool.versionup]
tag = true
commit = true
files = [ "Cargo.toml",]
tag_prefix = "python/"

[tool.poetry]
name = "pyseqdiff"
version = "0.3.2"
description = ""
authors = [ "Yohei Tamura <tamuhey@gmail.com>",]
[[tool.poetry.packages]]
include = "seqdiff"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
hypothesis = "^4.57.1"
twine = "^1.15.0"
